# Fin1

./: .gitignore  .replit  DEPLOYMENT.md  Financial_data.csv  advanced_visualizations.py  app.py  financial_analysis.py  nlp_processor.py  pyproject.toml  replit.nix  requirements.txt  streamlit_app.py
api/: index.py
attached_assets/: Fin_data.py  Pasted--workspace-streamlit-run-app-py-server-port-5000-server-address-0-0-0-0-Collecting-usage-stat-1743971990173.txt  Pasted-Chatbot-prototype-Building-a-fully-functional-AI-chatbot-for-financial-analysis-is-a-complex-process-1743952683117.txt  Pasted-LookupError-Resource-93mpu-1743954098684.txt  Pasted-LookupError-Resource-93mpu-1743954278488.txt  advanced_visualizations.py  app.py  financial_analysis.py  logs-aarshad32-fin1-main-api-index.py-2025-04-06T20_44_13.611Z.txt  logs-aarshad32-financeinsighthub-main-api-index.py-2025-04-06T20_31_31.152Z.txt  nlp_processor.py  pyproject.toml  sample_financial_data.csv
